C51-377: fix activity feed filter ui on small screens

--- a/scss/components/_activity-filter.scss
+++ b/scss/components/_activity-filter.scss
@@ -58,7 +58,7 @@
 }
 
 .civicase__activity-filter__contact {
-  margin-left: 16px;
+  margin-left: 8px;
 
   .btn {
     border: 1px solid $crm-grayblue-darker !important;
@@ -87,7 +87,7 @@
 .civicase__activity-filter__timeline,
 .civicase__activity-filter__category {
   display: inline-block;
-  margin-left: 16px;
+  margin-left: 8px;
   padding: 1px 0 !important;
 
   .select2-choice {
@@ -156,5 +156,31 @@
     border-bottom: 1px solid $gray-light;
     display: block;
     margin-top: 5px;
+  }
+}
+
+@media (max-width: 1420px) {
+  .civicase__case-details-panel:not(.civicase__case-details-panel--focused) {
+    .civicase__activity-filter {
+      padding: 16px 10px;
+    }
+
+    .civicase__activity-filter__timeline {
+      width: 120px !important;
+    }
+
+    .civicase__activity-filter__category {
+      width: 165px !important;
+    }
+
+    .civicase__activity-filter__more__text {
+      display: none;
+    }
+
+    .civicase__activity-filter__attachment,
+    .civicase__activity-filter__star,
+    .civicase__activity-filter__more {
+      padding: 5px 2px;
+    }
   }
 }
